refactor create new work

--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -4,7 +4,7 @@
 {% block elements %}
 <div class="am-upload-work">
     <div class="am-upload-work-box grid-container">
-        <form class="work-form" enctype="multipart/form-data">
+        <form class="work-form" enctype="multipart/form-data" method="POST">
             <p class="main-title">SUBIR NUEVA OBRA A MI PORTAFOLIO</p>
             <div class="grid-100">
                 <div class="separator">
